@@ -2,6 +2,6 @@ AUX build_xml.patch 2243 RMD160 1741ee9008fb7138dc0b888912f96c10203c8fe9 SHA1 a1
 AUX limewire.sh 607 RMD160 e235f3d6e980edb711d5144c2e8baf2cbc7eb643 SHA1 45bee6a2b98b3e1788ee27f9d19dae7de6182999 SHA256 70ad0c5e016447f8af346d9cc97eea6d2274a288aa51c076969fe5aebe4cf01f
 AUX main-icon.png 1819 RMD160 872e03be4172861ea3cb17533b11cb1c76443d55 SHA1 a0db4b114259089a78603f78db4f77f460badebb SHA256 27845b251072415511c2cb21a8583e94a63274e298ae5ebc8e009b8b05594cfa
 DIST limewire-4.14.8.zip 44352766 RMD160 55978256abf6c6cad06b75479b8f028db0569f7d SHA1 6bfd409690c73e599e99ea39420d5fa11c9fe254 SHA256 93d10473993daf6ea9a192e596487b2dfa449f3c2522890fa6c81845714d1b41
-EBUILD limewire-4.14.8.ebuild 3875 RMD160 c11b15dd20a439480fb029fe294461917aac4269 SHA1 55debe942f3d1c1786bfa0a92a57299ac4cc4020 SHA256 bc5e469ea794b64c368c4263424fae3c28b116588d4ce778838ae78095f21f3b
-MISC ChangeLog 537 RMD160 35a7e05b4925388905d4a2acb5045a712516b098 SHA1 bf81a466588b2247ca9220226405123f8deb8577 SHA256 14b96ef608bdaeac7c84acc09cfd54c31fb157e608d1c9e7f489371e34a83efe
+EBUILD limewire-4.14.8.ebuild 3889 RMD160 07038c538effcebf35724d59b742ba1e3fdeb6f5 SHA1 be932728e512335390485793f9547f7a9f65b8d1 SHA256 538993c6af82ec324bda9d2775b43b97b41f0505cb64a4e1671271c422cc5d12
+MISC ChangeLog 852 RMD160 563845f83b54283432ed1065032616ebce90165c SHA1 001b10a823cdf92234660e121a09ef54d278321d SHA256 62490f447fb3beae08ab0159d747d2503578ac62a7262298b7a229e25e1d46aa
 MISC metadata.xml 639 RMD160 7775f2347d89f1a9ae585a93d4212ced92602443 SHA1 e7db6b28745a005be6ca1f6f811c2f5a50b479c6 SHA256 b3852f17c69e04db656d67e8c58c5e1733b29f098a4bbb9937b9e617adf49597
