@@ -5,7 +5,7 @@
 JAVA_PKG_IUSE="source test"
 
 #IUSE="gtk"
-#WANT_ANT_TASKS="ant-"
+#WANT_ANT_TASKS="gettext"
 
 inherit java-pkg-2 java-ant-2
 
@@ -20,9 +20,11 @@ COMMON_DEP="
 	dev-java/commons-httpclient
 	dev-java/commons-logging
 	dev-java/commons-net
+	dev-java/commons-pool
 	dev-java/guice
 	dev-java/icu4j
 	dev-java/jgoodies-looks
+	dev-java/jmdns
 	dev-java/log4j
 	dev-java/xml-commons-external
 	test? (
@@ -34,9 +36,7 @@ DEPEND=">=virtual/jdk-1.5
 	app-arch/unzip
 	dev-java/aopalliance
 	dev-java/commons-collections
-	dev-java/commons-pool
 	dev-java/jgoodies-forms
-	dev-java/jmdns
 	${COMMON_DEP}"
 
 RDEPEND=">=virtual/jre-1.5
@@ -59,25 +59,27 @@ src_unpack() {
 	find . '(' -name '*.bat' -o -name '*.exe' ')' -delete
 
 #	find ${S} '(' -name '*.class' -o -name '*.jar' ')' -print -delete
-	find -path lib/sources -or -path tests -name "*.jar" -print -delete
+	find lib/sources tests -name "*.jar" -print -delete
 
 # Tried to remove but seem to be required :(
 #	rm -fR lib/jars/osx lib/jars/windows
 
 	cd lib/jars
-	rm -fR aopalliance.jar commons-logging.jar commons-net.jar guice-1.0.jar log4j.jar forms.jar looks.jar icu4j.jar jmdns.jar
+	rm -fR aopalliance.jar commons-logging.jar commons-net.jar \
+		guice-1.0.jar log4j.jar forms.jar looks.jar icu4j.jar jmdns.jar
+
 	java-pkg_jar-from --build-only aopalliance-1 aopalliance.jar
-#
+
 # Seems to want a modified version of commons-httpclient
 #	java-pkg_jar-from commons-httpclient
 	java-pkg_jar-from commons-logging
-#
+
 # Seems to want a modified version of commons-pool	
 #	java-pkg_jar-from commons-pool
 	java-pkg_jar-from commons-net
 	java-pkg_jar-from guice guice.jar guice-1.0.jar
 	java-pkg_jar-from log4j
-	java-pkg_jar-from jgoodies-forms
+	java-pkg_jar-from --build-only jgoodies-forms
 	java-pkg_jar-from jgoodies-looks-1.2
 	java-pkg_jar-from icu4j
 	java-pkg_jar-from jmdns
@@ -95,8 +97,8 @@ src_unpack() {
 #EANT_GENTOO_CLASSPATH=""
 
 src_install() {
-	java-pkg_dojar "${S}/lw-core.jar"
-	java-pkg_dojar "${S}/lw-gui.jar"
+	java-pkg_newjar "${S}/${PN}-core.jar" lw-core.jar
+	java-pkg_newjar "${S}/${PN}-gui.jar" lw-gui.jar
 	java-pkg_dojar "${S}/components/all/dist/lw-all.jar"
 
 # Install resources for Limewire. Don't let the jars deceive ya :)
@@ -104,38 +106,28 @@ src_install() {
 	insinto	${PREFIX}
 	doins "${S}/gui/xml.war"
 	doins "${S}/lib/jars/id3v2.jar"
-	doins "${S}/lib/jars/messages.jar"
 	doins "${S}/lib/jars/other/themes.jar"
+#ew, although I think this can be generated :)
+	java-pkg_newjar "${S}/lib/jars/messages.jar" MessagesBundles.jar
+	cd "${D}/usr/share/${PN}"
+	ln -s lib/MessagesBundles.jar
 
 # Bundled jars, yeah I know throw up in your mouth some
-	doins "${S}/lib/jars/clink.jar"
-	doins "${S}/lib/jars/daap.jar
-	doins "${S}/lib/jars/foxtrot.jar
-	doins "${S}/lib/jars/httpcore-nio.jar"
-	doins "${S}/lib/jars/httpcore.jar"
-	doins "${S}/lib/jars/jcraft.jar"
-	doins "${S}/lib/jars/jdic.jar"
-	doins "${S}/lib/jars/jl011.jar"
-	doins "${S}/lib/jars/mp3sp14.jar"
-	doins "${S}/lib/jars/tritonus.jar"
-	doins "${S}/lib/jars/vorbis.jar"
-	doins "${S}/lib/jars/linux/jdic_stub.jar"
+# but registering them you say, only doing so for launcher
+	bjs="clink.jar commons-httpclient.jar commons-pool.jar daap.jar foxtrot.jar httpcore-nio.jar \
+		gettext-commons.jar httpcore.jar jcraft.jar jdic.jar jl011.jar mp3sp14.jar \
+		tritonus.jar vorbis.jar linux/jdic_stub.jar ../i18nData/data/built/i18n.jar"
+	for bj in ${bjs} ; do
+		java-pkg_dojar "${S}/lib/jars/${bj}"
+	done
 
 	touch "${D}/${PREFIX}/hashes"
 
-# Custom launcher
-	exeinto /usr/bin
-	newexe ${FILESDIR}/limewire.sh limewire
-
-# Install default bash script, which requires hacking and gentoo integration
-#	cd "${S}/gui/"
-#	exeinto /usr/bin
-#	newexe run limewire
-
 # Or fly like a cow with gentoo specific stuff :)
-#	java-pkg_dolauncher limewire --main com.limegroup.gnutella.gui.Main
-
-#	newenvd limewire.envd 99limewire
+	java-pkg_dolauncher ${PN} \
+		--main com.limegroup.gnutella.gui.Main \
+		--java_args "-Xms64m -Xmx128m -Djava.net.preferIPV6Addresses=false -ea -Djava.net.preferIPv4stack=true" \
+		--pwd /usr/share/${PN}
 
 	insinto /usr/share/icons/hicolor/32x32/apps
 	newins "${FILESDIR}"/main-icon.png limewire.png
